src/pages/shift-current/shift-current.module.css
.shift_page {
  position: relative;
  width: 1120px;

}

.shift_container {
  width: 1116px;
  height: 230px;
  background-color: #ffffff;
  border-radius: 10px;
  margin-right: 20px;
  margin-bottom: 10px;
}

.users_container {
  width: 1116px;
  min-height: 635px;
  background-color: #ffffff;
  border-radius: 10px 10px 0 0;
  margin-right: 20px;
}

.shift_header {
  display: flex;
  justify-content: space-between;
  padding: 30px;
}

.shift_buttons {
  display: flex;
  width: 368px;
  justify-content: space-between;
}

.shift_table_container {
  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 30px;
}

.shift_table_container tbody tr td:first-child {
  width: 350px;
}

.shift_table_container tbody tr td:nth-child(2) {
  width: 350px;
}

.table_cell {
  padding-left: 10px;
}

.table_cell_date {
  padding-left: 10px;
  display: flex;
  align-items: center;
}

.table_cell_button {
  margin-left: 10px;
}

.calendar_container {
  position: absolute;
  top: 200px;
  left: 410px;
  z-index: 1;
}

.users_subtitle {
  padding: 30px 0 20px 30px;
  margin: 0;
  font-family: 'Lato';
  font-size: 24px;
  line-height: 29px;
  font-weight: 700;
}

.users_table_container {
  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 30px;
}

.users_table_container > div > table > tbody > tr:first-child > td:first-child {
  width: 300px;
}

.table_cell_name {
  padding-left: 10px;
  color: var(--colors-interface-blue);
}

.footer {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 1116px;
  background-color: #ffffff;
  border-radius: 0 0 10px 10px;
  margin-right: 20px;
  margin-bottom: 20px;
  padding-bottom: 20px;
  padding-right: 30px;
  box-sizing: border-box;

}

.footer_title {
  font-family: 'Lato';
  font-size: 16px;
  line-height: 19px;
  font-weight: 600;
  color: #929EAD;
  padding-right: 220px;
}

